--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,13 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+azure-Debug.vgdbsettings
+azure-Release.vgdbsettings
+gcc_Release.h
+debug.pro
+azure.pro.old
+*.vcxproj
+azure.vcxproj.filters
+VisualGDBCache/azure-Debug/SourceCache.dat
+*.pro
+gcc_Debug.h
